<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.survey.Main5Activity"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:text="@string/the_way_you_would_like_to_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        tools:fontFamily="casual"
        android:fontFamily="casual"
        tools:text="Q4.The way you would like to travel?" />


    <Button
        android:text="@string/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/button5"
        android:textSize="24sp"
        android:onClick="onClick"
        tools:fontFamily="casual"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RG4"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="13dp">

        <RadioButton
            android:text="@string/travel_by_myself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="47dp"
            android:id="@+id/radioButton15"
            android:textSize="18sp" />

        <RadioButton
            android:text="@string/travel_with_a_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:id="@+id/radioButton16"
            android:textSize="18sp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/other"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton17"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1" />
    </RadioGroup>

</RelativeLayout>
