<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.survey.Main3Activity"
    android:background="@android:color/holo_blue_light">

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textSize="24sp"
        android:onClick="onClick"

        android:layout_marginBottom="24dp"

        android:layout_alignParentBottom="true"
        tools:fontFamily="casual"
        android:fontFamily="casual" />

    <TextView
        android:text=" Q2.What is your age?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="36sp"
        tools:ignore="HardcodedText"

        android:layout_above="@+id/radioGroup2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="34dp"
        tools:fontFamily="casual"
        tools:typeface="serif" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:id="@+id/RG2">

        <RadioButton
            android:text="@string/_65_80"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:id="@+id/radioButton7"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="49dp"
            android:layout_marginEnd="49dp"
            android:layout_marginTop="103dp" />

        <RadioButton
            android:text="@string/_45_64"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:id="@+id/radioButton3"

            android:textSize="18sp" />

        <RadioButton
            android:text="@string/_25_44"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:id="@+id/radioButton6"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup" />

        <RadioButton
            android:text="@string/_15_24"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/radioButton4"
            android:layout_alignLeft="@+id/radioButton4"
            android:layout_alignStart="@+id/radioButton4"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <RadioButton
            android:text="@string/_6_14"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:textSize="18sp"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignLeft="@+id/radioGroup2"
            android:layout_alignStart="@+id/radioGroup2" />

    </RadioGroup>
</RelativeLayout>
