<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.survey.Main2Activity"
    android:background="@android:color/holo_blue_light">


    <TextView
        android:text="QI.What is your gender?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:typeface="serif"
        android:fontFamily="casual" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/RG1"
        android:layout_marginTop="69dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/radioButton"
            android:textSize="30sp"
            android:layout_marginTop="37dp"
            android:layout_weight="1"
            android:layout_alignTop="@+id/RG1"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2"
            android:fontFamily="casual" />

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"

            android:textSize="24sp"
            android:layout_marginTop="69dp"
            android:fontFamily="casual" />

    </RadioGroup>

    <Button
        android:text="@string/next3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onClick"
        android:layout_below="@+id/RG1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        tools:fontFamily="casual"
        android:fontFamily="casual" />


</RelativeLayout>
